v1.1.0/modules/schema/pages/class/StageTrigger.adoc
= `StageTrigger`
:toclevels: 4


+++Condition that is triggered either by TriggerCondition of by gate condition within a stage and has remedial action-s.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:StageTrigger`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`StageTrigger`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<GateArmed,`GateArmed`>>
//| [[slots_table.GateArmed]]<<GateArmed,`GateArmed`>>
| 0..1 +
xref::class/Gate.adoc[`Gate`]
| +++Association to a Gate that through a gate logic and input pin defines arming of the StageTrigger.+++
| _n/a_

| <<GateComCondition,`GateComCondition`>>
//| [[slots_table.GateComCondition]]<<GateComCondition,`GateComCondition`>>
| 0..1 +
xref::class/Gate.adoc[`Gate`]
| +++For the StageTrigger to active the set of protective actions the condition for communication needs to be met (true).+++
| _n/a_

| <<GateTrigger,`GateTrigger`>>
//| [[slots_table.GateTrigger]]<<GateTrigger,`GateTrigger`>>
| 0..1 +
xref::class/Gate.adoc[`Gate`]
| +++The Gate result that trigger the StageTrigger and thereby executing the a set of protective actions.+++
| _n/a_

| <<ProtectiveActionCollection,`ProtectiveActionCollection`>>
//| [[slots_table.ProtectiveActionCollection]]<<ProtectiveActionCollection,`ProtectiveActionCollection`>>
| 1 +
xref::class/ProtectiveActionCollection.adoc[`ProtectiveActionCollection`]
| _n/a_
| _n/a_

| <<Stage,`Stage`>>
//| [[slots_table.Stage]]<<Stage,`Stage`>>
| 1 +
xref::class/Stage.adoc[`Stage`]
| _n/a_
| _n/a_

| <<armed,`armed`>>
//| [[slots_table.armed]]<<armed,`armed`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++The status of the class set by operation or by signal. Optional field that will override other status fields.+++
| _n/a_

| <<normalArmed,`normalArmed`>>
//| [[slots_table.normalArmed]]<<normalArmed,`normalArmed`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++The default/normal value used when other active signal/values are missing.+++
| _n/a_

| <<priority,`priority`>>
//| [[slots_table.priority]]<<priority,`priority`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Priority of trigger. 0 = don t care (default) 1 = highest priority. 2 is less than 1 and so on. A trigger with the highest...+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#armed]
=== `armed`
+++The status of the class set by operation or by signal. Optional field that will override other status fields.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:StageTrigger.armed`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.armed,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#GateArmed]
=== `GateArmed`
+++Association to a Gate that through a gate logic and input pin defines arming of the StageTrigger.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:StageTrigger.GateArmed`
| Cardinality
| 0..1
| Type
| xref::class/Gate.adoc[`Gate`]


|===

////
[.text-left]
--
<<slots_table.GateArmed,&#10548;>>
--
////


//[discrete]
[#GateComCondition]
=== `GateComCondition`
+++For the StageTrigger to active the set of protective actions the condition for communication needs to be met (true).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:StageTrigger.GateComCondition`
| Cardinality
| 0..1
| Type
| xref::class/Gate.adoc[`Gate`]


|===

////
[.text-left]
--
<<slots_table.GateComCondition,&#10548;>>
--
////


//[discrete]
[#GateTrigger]
=== `GateTrigger`
+++The Gate result that trigger the StageTrigger and thereby executing the a set of protective actions.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:StageTrigger.GateTrigger`
| Cardinality
| 0..1
| Type
| xref::class/Gate.adoc[`Gate`]


|===

////
[.text-left]
--
<<slots_table.GateTrigger,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#normalArmed]
=== `normalArmed`
+++The default/normal value used when other active signal/values are missing.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:StageTrigger.normalArmed`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.normalArmed,&#10548;>>
--
////


//[discrete]
[#priority]
=== `priority`
+++Priority of trigger. 0 = don t care (default) 1 = highest priority. 2 is less than 1 and so on. A trigger with the highest priority will trigger first.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:StageTrigger.priority`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.priority,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ProtectiveActionCollection]
=== `ProtectiveActionCollection`



[cols="h,4",width=65%]
|===
| URI
| `cim:StageTrigger.ProtectiveActionCollection`
| Cardinality
| 1
| Type
| xref::class/ProtectiveActionCollection.adoc[`ProtectiveActionCollection`]


|===

////
[.text-left]
--
<<slots_table.ProtectiveActionCollection,&#10548;>>
--
////


//[discrete]
[#Stage]
=== `Stage`



[cols="h,4",width=65%]
|===
| URI
| `cim:StageTrigger.Stage`
| Cardinality
| 1
| Type
| xref::class/Stage.adoc[`Stage`]


|===

////
[.text-left]
--
<<slots_table.Stage,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/Gate.adoc[`Gate`] | xref::class/Gate.adoc#StageTrigger[`StageTrigger`]



| xref::class/ProtectiveActionCollection.adoc[`ProtectiveActionCollection`] | xref::class/ProtectiveActionCollection.adoc#StageTrigger[`StageTrigger`]



| xref::class/Stage.adoc[`Stage`] | xref::class/Stage.adoc#StageTrigger[`StageTrigger`]


|===

